Change caret place to be stored in variable. User no longer types directly into input field. This should hopefully fix issues with setting focus to the input field on mobile. ALso fixed bug where colors were not applied to keys because css was ordered wrong.

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,7 +1,3 @@
-a {
-  color: #00B7FF;
-}
-
 input {
   text-align: center;
   width: 60px;
@@ -25,18 +21,6 @@ input {
 
 .cur-input:hover {
   cursor: text;
-}
-
-.success {
-  background-color: #bfe470;
-}
-
-.warning {
-  background-color: #ffff82;
-}
-
-.danger {
-  background-color: #ff0101ab;
 }
 
 .filler {
@@ -96,4 +80,17 @@ ul {
 
 .answer {
   font-size: 24px;
+}
+
+/* Keep these at the end so they are applied after button color */
+.success {
+  background-color: #bfe470;
+}
+
+.warning {
+  background-color: #ffff82;
+}
+
+.danger {
+  background-color: #ff0101ab;
 }
